--- a/.github/workflows/webgl_build.yml
+++ b/.github/workflows/webgl_build.yml
@@ -38,7 +38,7 @@ jobs:
 
           # デプロイ用ビルドフォルダパスを指定する
           # GameCI の Builder はデフォルトでは build フォルダにビルド内容を出力する
-          folder: build/WebGL
+          folder: build/WebGL/WebGL
 
       # Builder で出力した WebGL ビルドをアーティファクトでダウンロード可能にする
       - name: Upload the WebGL Build
